refactor: Introduce `ScanTimeoutConfigAdapter` and unify scan timeout handling
- Added `ScanTimeoutConfigAdapter` to bridge infrastructure configuration with the application layer.
- Replaced `ScanTimeoutConfig` references with the new interface `ScanTimeOutConfig`.
- Updated tests and service implementations to reflect the migrated configuration setup.
- Enhanced `ConfluenceSpace` with a nullable `DataOwners` field for broader context in processes.